Add alex as contributor \cc @alexjv89

--- a/package.json
+++ b/package.json
@@ -1,7 +1,11 @@
 {
   "name": "node-stl",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "description": "parse stl files with Node.js and get volume, weight, and bounding box",
+  "contributors": {
+    "name": "Alex J Vazhatharayil",
+    "url": "https://github.com/alexjv89"
+  },
   "author": {
     "name": "Johannes Boyne",
     "email": "johannes@boyne.de",
