--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "node-stl",
-  "version": "0.5.0",
+  "version": "0.5.1",
   "description": "parse stl files with Node.js and get volume, weight, and bounding box",
   "contributors": [
     {
@@ -18,6 +18,10 @@
     {
       "name": "Renari",
       "url": "https://github.com/Renari"
+    },
+    {
+      "name": "jacekkopecky",
+      "url": "https://github.com/jacekkopecky"
     }
   ],
   "author": {
