implement computation of center of mass

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "node-stl",
   "version": "0.5.1",
-  "description": "parse stl files with Node.js and get volume, weight, and bounding box",
+  "description": "parse stl files with Node.js and get volume, weight, bounding box, and center of mass",
   "contributors": [
     {
       "name": "Alex J Vazhatharayil",
