--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
   "license": "MIT",
   "dependencies": {},
   "devDependencies": {
-    "mocha": "^5.2.0",
+    "minimist": ">=0.2.1",
+    "mocha": "^8.0.1",
     "prettier": "^1.15.2",
     "request": "^2.88.0"
   }
